# profile.ivi.phoned

./: CMakeLists.txt  project.config
packaging/: phoned.changes  phoned.spec
pkgconfig/: phoned.pc.in
scripts/: org.tizen.phone.service  phoned.service
src/: Logger.h  bluez.cpp  bluez.h  connman.cpp  connman.h  obex.cpp  obex.h  ofono.cpp  ofono.h  phone.cpp  phone.h  phoned.cpp  utils.cpp  utils.h
test/: Makefile  main.cpp
